fix(Reveal): Only hide overflow when collapsed and during transition

--- a/src/components/reveal/Reveal.css
+++ b/src/components/reveal/Reveal.css
@@ -1,7 +1,6 @@
 @import '../../materials/animations';
 
 .ax-reveal {
-  overflow: hidden;
   transition-property: height, opacity, margin;
   transition-duration: var(--transition-time-slow);
   transition-timing-function: var(--transition-function);
@@ -9,7 +8,6 @@
 
 .ax-reveal__inner {
   transform: translateY(25%);
-  overflow: hidden;
   transition-property: transform;
   transition-duration: var(--transition-time-slow);
   transition-timing-function: var(--transition-function);
